--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Rene is a design system for intention and meaning",
   "main": "rene.css",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm dist/bundle.js",
+    "build-dev": "webpack --mode development",
+    "build-prod": "webpack --mode production"
   },
   "repository": {
     "type": "git",
