--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rene",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Rene is a design system for intention and meaning",
   "main": "rene.css",
   "scripts": {
@@ -32,6 +32,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^2.6.0",
+    "release": "^6.3.1",
     "style-loader": "^3.3.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.72.0",
