--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "rene",
-  "version": "1.0.0-canary.2",
+  "name": "renecss",
+  "version": "1.0.0",
   "description": "Rene is a design system for intention and meaning",
   "main": "rene.css",
   "scripts": {
@@ -34,5 +34,8 @@
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
     "webpack-shell-plugin-next": "^2.2.2"
+  },
+  "dependencies": {
+    "np": "^7.6.1"
   }
 }
