--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "rene": "webpack --mode development",
-    "rene.min": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "rene.min": "webpack --mode production"
   },
   "repository": {
     "type": "git",
