--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "clean": "rm dist/bundle.js",
     "rene": "webpack --mode development",
-    "rene.min": "webpack --mode production"
+    "rene.min": "npm version patch && webpack --mode production"
   },
   "repository": {
     "type": "git",
