--- a/.github/workflows/publish-npm-package.yml
+++ b/.github/workflows/publish-npm-package.yml
@@ -1,9 +1,10 @@
 name: Publish NPM Package
 
 on:
-  release:
-    types: [created]
-
+  workflow_run:
+    workflows: ["Version Check and Release Creating"]
+    types:
+      - completed
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -29,4 +30,4 @@ jobs:
       - run: npm ci
       - run: npm publish --access public
         env:
-          NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
